--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidar">
-    <!-- This helps to permit the user to access Camera -->
     <uses-permission android:name="android.permission.CAMERA" />
-    <!--
-This helps to check a specific feature in the phone's hardware,
-        here it is OpenGl ES version 3
-    -->
+
     <uses-feature
         android:glEsVersion="0x00030000"
-        android:required="true" /> <!-- Here it is checking for AR feature in phone camera -->
+        android:required="true" />
     <uses-feature
         android:name="android.hardware.camera.ar"
         android:required="true" />
